# aoc_2023

./: CMakeLists.txt
day1/: CMakeLists.txt  Day1.cpp
day2/: CMakeLists.txt  Day2.cpp
day3/: CMakeLists.txt  Day3.cpp
day5/: CMakeLists.txt  Day5.cpp
day6/: CMakeLists.txt  Day6.cpp
