# CMakeList.txt : CMake project for AdventOfCode2022, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project("AdventOfCode2021")

add_subdirectory("day1")
add_subdirectory("day2")
add_subdirectory("day3")
add_subdirectory("day5")
add_subdirectory("day6")

# TODO: Add tests and install targets if needed.
